--- a/public/main.css
+++ b/public/main.css
@@ -18,7 +18,7 @@ html, body {
     margin: 0; 
     padding: 0;
     font-family: 'Advent Pro', sans-serif;
-    font-size: 22px;
+    font-size: 2vw;
   } 
   
 h1, h2, h3 {
